Mejoras: se incorporan valores de referencia en formulario de hemograma y formula leucocitaria. Se mueven los campos desde hemograma hasta formula leucocitaria. Los campos en formula leucocitaria admiten 0. Se agrega validacion del 100% entre la suma de todas las relativa en formula leucocitaria.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Ocultar flechas en input[type=number] para Chrome, Safari, Edge */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Ocultar flechas en input[type=number] para Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
